Fix round display spacing

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -413,6 +413,10 @@ input, label {
     height: 210px;
 }
 
+.course-name-list {
+    min-height: 38px;
+}
+
 /*Pagination*/
 .page {
   display: none;
